completed experiment which passes data from one screen to another

--- a/Experiments/IsaacBlandin/PassDataExperiment/app/src/main/res/layout/fragment_second.xml
+++ b/Experiments/IsaacBlandin/PassDataExperiment/app/src/main/res/layout/fragment_second.xml
@@ -10,6 +10,8 @@
         android:id="@+id/textview_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="40sp"
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@id/button_second"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
