Got android studio to pass data between fragments, slightly different than isaac but works

--- a/Experiments/AbramDemo/android_1/app/src/main/res/layout/activity_main.xml
+++ b/Experiments/AbramDemo/android_1/app/src/main/res/layout/activity_main.xml
@@ -11,28 +11,24 @@
         android:layout_height="wrap_content"
         android:theme="@style/Theme.Attempt_3.AppBarOverlay">
 
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/Theme.Attempt_3.PopupOverlay" />
+
     </com.google.android.material.appbar.AppBarLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+    <include layout="@layout/content_main" />
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="83dp"
-        android:background="?attr/colorPrimary"
-        app:layout_anchor="@+id/toolbar"
-        app:layout_anchorGravity="bottom|center"
-        app:popupTheme="@style/Theme.Attempt_3.PopupOverlay" />
-
-    <TextView
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView" />
-
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="16dp"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
