--- a/Frontend/Unus/app/src/main/res/layout/fragment_log_in_screen.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_log_in_screen.xml
@@ -1,78 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     >
-
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="270dp"
-        android:layout_height="270dp"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.9"
+        android:layout_margin="30dp"
         android:contentDescription="@string/logo_content_description"
         android:src="@drawable/ic_uno_logo"
-        app:layout_constraintBottom_toTopOf="@id/login_header"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         />
 
     <TextView
         android:id="@+id/login_header"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_width="fill_parent"
+        android:layout_marginHorizontal="30dp"
         android:text="@string/login_header"
+        android:textAlignment="center"
         android:textSize="20sp"
-        android:layout_marginTop="270dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/username_field"
-        app:layout_constraintVertical_chainStyle="packed"
+
         android:textStyle="bold"
         android:textColor="@color/black"
         />
 
     <EditText
         android:id="@+id/username_field"
+        android:layout_height="50dp"
         android:layout_width="fill_parent"
-        android:layout_marginHorizontal="40sp"
-        android:layout_height="40sp"
-        android:layout_marginTop="40sp"
-        app:layout_constraintTop_toBottomOf="@id/login_header"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/password_field"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="30dp"
         android:hint="@string/username_hint"
         />
 
     <EditText
         android:id="@+id/password_field"
+        android:layout_height="50dp"
         android:layout_width="fill_parent"
-        android:layout_marginHorizontal="40sp"
-        android:layout_height="40sp"
-        app:layout_constraintBottom_toTopOf="@id/login_button"
-        app:layout_constraintTop_toBottomOf="@id/username_field"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="30dp"
         android:hint="@string/password_hint"
-        android:layout_marginTop="30sp"
         />
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_width="fill_parent"
+        android:layout_weight="0.15"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="30dp"
         android:text="@string/login_button_text"
-        app:layout_constraintTop_toBottomOf="@id/password_field"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="30sp"
         android:backgroundTint="#ED1C24"
         android:textColor="#F8DA27"
         android:textStyle="bold"
         />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Space
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        />
+
+</LinearLayout>
