--- a/Frontend/Unus/app/src/main/res/layout/fragment_main_menu.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_main_menu.xml
@@ -7,6 +7,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/to_user_profile"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment" />
