--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
@@ -11,7 +11,7 @@
         android:layout_height="50dp"
         android:layout_width="fill_parent"
         android:layout_marginHorizontal="30dp"
-        android:text="@string/login_header"
+        android:text="@string/user_settings"
         android:textAlignment="center"
         android:textSize="20sp"
 
@@ -20,12 +20,13 @@
         />
 
     <Button
-        android:id="@+id/user_settings"
+        android:id="@+id/delete_user"
         android:layout_width="250dp"
         android:layout_height="50dp"
         android:layout_marginVertical="500dp"
         android:layout_marginHorizontal="80dp"
-        android:text="@string/user_settings"
+
+        android:text="@string/delete_user"
         />
 
-    </LinearLayout>
+</LinearLayout>
