--- a/Frontend/Unus/app/src/main/res/layout/fragment_log_in_screen.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_log_in_screen.xml
@@ -82,6 +82,19 @@
         android:textStyle="bold"
         />
 
+    <Button
+        android:id="@+id/create_account_button"
+        android:layout_height="0dp"
+        android:layout_width="fill_parent"
+        android:layout_weight="0.15"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="30dp"
+        android:text="@string/signup_button_text"
+        android:backgroundTint="#ED1C24"
+        android:textColor="#F8DA27"
+        android:textStyle="bold"
+        />
+
     <Space
         android:layout_width="fill_parent"
         android:layout_height="0dp"
