--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
@@ -6,6 +6,38 @@
     android:orientation="vertical"
     >
 
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="30dp"
+
+        >
+
+
+        <Button
+            android:id="@+id/back"
+            android:layout_height="50dp"
+            android:layout_width="fill_parent"
+            android:layout_weight="0.15"
+            android:layout_marginHorizontal="30dp"
+            android:text="@string/back_button"
+            />
+
+        <Button
+            android:id="@+id/user_settings"
+            android:layout_height="50dp"
+            android:layout_width="fill_parent"
+            android:layout_weight="0.15"
+            android:layout_marginHorizontal="30dp"
+            android:text="@string/user_settings"
+            />
+
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/username"
         android:layout_height="50dp"
@@ -19,13 +51,5 @@
         android:textColor="@color/black"
         />
 
-    <Button
-        android:id="@+id/user_settings"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginVertical="500dp"
-        android:layout_marginHorizontal="80dp"
-        android:text="@string/user_settings"
-        />
 
     </LinearLayout>
