--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
@@ -6,18 +6,39 @@
     android:orientation="vertical"
     >
 
+    <LinearLayout
+
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="0dp"
+
+        >
+
+        <Button
+            android:id="@+id/back"
+            android:layout_width="10dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_weight="0.05"
+            android:text="@string/back_button" />
+
     <TextView
         android:id="@+id/username"
+        android:layout_width="40dp"
         android:layout_height="50dp"
-        android:layout_width="fill_parent"
-        android:layout_marginHorizontal="30dp"
+        android:layout_marginHorizontal="40dp"
+        android:layout_weight="0.15"
         android:text="@string/user_settings"
-        android:textAlignment="center"
         android:textSize="20sp"
 
         android:textStyle="bold"
         android:textColor="@color/black"
         />
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/delete_user"
