--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
@@ -25,10 +25,9 @@
             android:text="@string/back_button" />
 
     <TextView
-        android:id="@+id/username"
+        android:id="@+id/top_text"
         android:layout_width="40dp"
         android:layout_height="50dp"
-        android:layout_marginHorizontal="40dp"
         android:layout_weight="0.15"
         android:text="@string/user_settings"
         android:textSize="20sp"
@@ -39,12 +38,40 @@
 
     </LinearLayout>
 
+    <LinearLayout
+
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginTop="400dp"
+        android:layout_marginHorizontal="0dp"
+
+        >
+
+        <Button
+            android:id="@+id/change_name"
+            android:layout_width="10dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_weight="0.05"
+            android:text="Change Username" />
+
+        <Button
+            android:id="@+id/change_password"
+            android:layout_width="10dp"
+            android:layout_height="50dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_weight="0.05"
+            android:text="Change Password" />
+
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/delete_user"
         android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginVertical="500dp"
+        android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="80dp"
 
         android:text="@string/delete_user"
