formatted a little bit and added a get request for user stats

--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
@@ -6,13 +6,12 @@
     android:orientation="vertical"
     >
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
 
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
-        android:layout_marginTop="15dp"
-        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="10dp"
 
         >
 
@@ -20,20 +19,22 @@
         <Button
             android:id="@+id/back"
             android:layout_height="50dp"
-            android:layout_width="fill_parent"
-            android:layout_weight="0.15"
-            android:layout_marginHorizontal="30dp"
+            android:layout_width="100dp"
+            android:layout_marginLeft="10dp"
             android:text="@string/back_button"
+            />
+        <TextView
+            android:layout_width="140dp"
+            android:layout_height="50dp"
             />
 
         <Button
             android:id="@+id/user_settings"
+            android:layout_width="150dp"
             android:layout_height="50dp"
-            android:layout_width="fill_parent"
-            android:layout_weight="0.15"
-            android:layout_marginHorizontal="30dp"
-            android:text="@string/user_settings"
-            />
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="10dp"
+            android:text="@string/user_settings" />
 
 
     </LinearLayout>
@@ -50,6 +51,48 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         />
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+        android:layout_width="fill_parent"
+        android:layout_height="250dp"
+        android:orientation="vertical"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="30dp"
+
+        >
+
+        <TextView
+            android:layout_height="40dp"
+            android:layout_width="fill_parent"
+            android:layout_marginHorizontal="30dp"
+            android:text="Stats:"
+            android:textSize="20sp"
+
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            />
+        <TextView
+            android:id="@+id/games"
+            android:layout_height="30dp"
+            android:layout_width="fill_parent"
+            android:layout_marginHorizontal="30dp"
+            android:text="Games Played: 0"
+            android:textSize="20sp"
+
+            android:textColor="@color/black"
+            />
+        <TextView
+            android:id="@+id/wins"
+            android:layout_height="30dp"
+            android:layout_width="fill_parent"
+            android:layout_marginHorizontal="30dp"
+            android:text="Games Won: 0"
+            android:textSize="20sp"
+
+            android:textColor="@color/black"
+            />
+    </LinearLayout>
 
 
     </LinearLayout>
