--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
@@ -12,29 +12,27 @@
         android:layout_height="50dp"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
-        android:layout_marginHorizontal="0dp"
 
         >
 
         <Button
             android:id="@+id/back"
-            android:layout_width="10dp"
+            android:layout_width="100dp"
             android:layout_height="50dp"
-            android:layout_marginHorizontal="10dp"
-            android:layout_weight="0.05"
+            android:layout_marginLeft="10dp"
             android:text="@string/back_button" />
 
-    <TextView
-        android:id="@+id/top_text"
-        android:layout_width="40dp"
-        android:layout_height="50dp"
-        android:layout_weight="0.15"
-        android:text="@string/user_settings"
-        android:textSize="20sp"
+        <TextView
+            android:id="@+id/top_text"
+            android:layout_width="190dp"
+            android:layout_height="50dp"
+            android:text="@string/user_settings"
+            android:textSize="20sp"
 
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        />
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            />
 
     </LinearLayout>
 
