--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
@@ -20,13 +20,13 @@
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
-            android:text="@string/back_button" />
+            android:text="back" />
 
         <TextView
             android:id="@+id/top_text"
             android:layout_width="190dp"
             android:layout_height="50dp"
-            android:text="@string/user_settings"
+            android:text="Settings"
             android:textSize="20sp"
 
             android:textStyle="bold"
@@ -72,7 +72,7 @@
         android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="80dp"
 
-        android:text="@string/delete_user"
+        android:text="Delete Account"
         />
 
 </LinearLayout>
