--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
@@ -41,7 +41,19 @@
 
     <TextView
         android:id="@+id/username"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
+        android:layout_width="fill_parent"
+        android:layout_marginHorizontal="30dp"
+        android:text="Username"
+        android:textAlignment="center"
+        android:textSize="20sp"
+
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        />
+    <TextView
+        android:id="@+id/userID"
+        android:layout_height="30dp"
         android:layout_width="fill_parent"
         android:layout_marginHorizontal="30dp"
         android:text="Username"
