--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
@@ -68,19 +68,26 @@
 
         android:layout_width="fill_parent"
         android:layout_height="250dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="30dp"
 
         >
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+            android:layout_width="200dp"
+            android:layout_height="250dp"
+            android:orientation="vertical"
+
+            >
 
         <TextView
             android:layout_height="40dp"
             android:layout_width="fill_parent"
-            android:layout_marginHorizontal="30dp"
             android:text="Stats:"
             android:textSize="20sp"
 
+            android:textAlignment="center"
             android:textStyle="bold"
             android:textColor="@color/black"
             />
@@ -88,7 +95,6 @@
             android:id="@+id/games"
             android:layout_height="30dp"
             android:layout_width="fill_parent"
-            android:layout_marginHorizontal="30dp"
             android:text="Games Played: 0"
             android:textSize="20sp"
 
@@ -98,12 +104,35 @@
             android:id="@+id/wins"
             android:layout_height="30dp"
             android:layout_width="fill_parent"
-            android:layout_marginHorizontal="30dp"
             android:text="Games Won: 0"
             android:textSize="20sp"
 
             android:textColor="@color/black"
             />
+        </LinearLayout>
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+            android:id="@+id/friends"
+            android:layout_width="150dp"
+            android:layout_height="250dp"
+            android:orientation="vertical"
+
+            >
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="40dp"
+                android:text="Friends:"
+                android:textSize="20sp"
+
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                />
+
+
+        </LinearLayout>
     </LinearLayout>
 
 
