just changed the colors of a few buttons

--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
@@ -20,7 +20,10 @@
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
-            android:text="back" />
+            android:text="back"
+            android:backgroundTint="#ED1C24"
+            android:textColor="#F8DA27"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/top_text"
@@ -52,7 +55,10 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="10dp"
             android:layout_weight="0.05"
-            android:text="Change Username" />
+            android:text="Change Username"
+            android:backgroundTint="#ED1C24"
+            android:textColor="#F8DA27"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/change_password"
@@ -60,7 +66,10 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="10dp"
             android:layout_weight="0.05"
-            android:text="Change Password" />
+            android:text="Change Password"
+            android:backgroundTint="#ED1C24"
+            android:textColor="#F8DA27"
+            android:textStyle="bold"/>
 
     </LinearLayout>
 
@@ -73,6 +82,9 @@
         android:layout_marginHorizontal="80dp"
 
         android:text="Delete Account"
+        android:backgroundTint="#ED1C24"
+        android:textColor="#F8DA27"
+        android:textStyle="bold"
         />
 
 </LinearLayout>
