--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
@@ -22,6 +22,9 @@
             android:layout_width="100dp"
             android:layout_marginLeft="10dp"
             android:text="BACK"
+            android:backgroundTint="#ED1C24"
+            android:textColor="#F8DA27"
+            android:textStyle="bold"
             />
         <TextView
             android:layout_width="140dp"
@@ -34,7 +37,10 @@
             android:layout_height="50dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
-            android:text="Settings" />
+            android:text="Settings"
+            android:backgroundTint="#ED1C24"
+            android:textColor="#F8DA27"
+            android:textStyle="bold" />
 
 
     </LinearLayout>
