--- a/Frontend/Unus/app/src/main/res/layout/user_search_fragment.xml
+++ b/Frontend/Unus/app/src/main/res/layout/user_search_fragment.xml
@@ -12,12 +12,17 @@
         android:layout_height="50dp"
         android:text="@string/back"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="50dp"
+        android:layout_marginTop="30dp"
+        android:orientation="vertical"
+        >
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginHorizontal="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_height="50dp"
         >
 
         <EditText
@@ -32,8 +37,16 @@
             android:layout_height="50dp"
             android:text="@string/search"
             />
+    </LinearLayout>
 
+        <LinearLayout
+            android:id="@+id/results"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            >
 
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
