--- a/Frontend/Unus/app/src/main/res/layout/fragment_friend_request.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_friend_request.xml
@@ -35,7 +35,7 @@
             android:id="@+id/results"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             >
 
         </LinearLayout>
