--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
@@ -126,6 +126,7 @@
 
             >
 
+
             <TextView
                 android:layout_width="fill_parent"
                 android:layout_height="40dp"
@@ -136,6 +137,19 @@
                 android:textStyle="bold"
                 android:textColor="@color/black"
                 />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:id="@+id/friend_buttons"
+                android:orientation="horizontal"
+                >
+            </LinearLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                ></Space>
 
 
         </LinearLayout>
