--- a/Frontend/Unus/app/src/main/res/layout/user_search_fragment.xml
+++ b/Frontend/Unus/app/src/main/res/layout/user_search_fragment.xml
@@ -11,6 +11,8 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:text="@string/back"
+        android:backgroundTint="@color/red"
+        android:textColor="@color/yellow"
         />
     <LinearLayout
         android:layout_width="match_parent"
@@ -36,6 +38,8 @@
             android:layout_width="100dp"
             android:layout_height="50dp"
             android:text="@string/search"
+            android:backgroundTint="@color/red"
+            android:textColor="@color/yellow"
             />
     </LinearLayout>
 
