--- a/Frontend/Unus/app/src/main/res/layout/fragment_main_menu.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_main_menu.xml
@@ -4,10 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/backgroundColor"
     >
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
@@ -34,7 +34,7 @@
                 android:layout_weight="0.6"
                 android:textSize="25sp"
                 android:layout_gravity="end"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 />
 
             <TextView
@@ -45,7 +45,7 @@
                 android:text="@string/id_display"
                 android:textSize="15sp"
                 android:layout_gravity="end"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 />
 
         </LinearLayout>
@@ -55,7 +55,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/ic_blank_avatar"
-            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
             />
 
     </LinearLayout>
@@ -85,8 +85,8 @@
         android:layout_height="0dp"
         android:layout_weight="0.2"
         android:layout_marginHorizontal="50dp"
-        android:backgroundTint="#ED1C24"
-        android:textColor="#F8DA27"
+        android:backgroundTint="?attr/buttonTint"
+        android:textColor="?attr/colorSecondary"
         android:textStyle="bold"
         android:textSize="25sp"
         android:text="@string/join_game_button"
@@ -98,8 +98,8 @@
         android:layout_height="0dp"
         android:layout_weight="0.2"
         android:layout_marginHorizontal="50dp"
-        android:backgroundTint="#ED1C24"
-        android:textColor="#F8DA27"
+        android:backgroundTint="?attr/buttonTint"
+        android:textColor="?attr/colorSecondary"
         android:textStyle="bold"
         android:textSize="25sp"
         android:text="@string/host_game_button"
@@ -111,8 +111,8 @@
         android:layout_height="0dp"
         android:layout_weight="0.2"
         android:layout_marginHorizontal="50dp"
-        android:backgroundTint="#ED1C24"
-        android:textColor="#F8DA27"
+        android:backgroundTint="?attr/buttonTint"
+        android:textColor="?attr/colorSecondary"
         android:textStyle="bold"
         android:textSize="25sp"
         android:text="@string/leaderboards_button"
@@ -124,8 +124,8 @@
         android:layout_height="0dp"
         android:layout_weight="0.2"
         android:layout_marginHorizontal="50dp"
-        android:backgroundTint="#ED1C24"
-        android:textColor="#F8DA27"
+        android:backgroundTint="?attr/buttonTint"
+        android:textColor="?attr/colorSecondary"
         android:textStyle="bold"
         android:textSize="25sp"
         android:text="@string/logout_button"
