--- a/Frontend/Unus/app/src/main/res/layout/fragment_sign_up_screen.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_sign_up_screen.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/backgroundColor"
     >
 
     <Space
@@ -26,7 +27,7 @@
         android:textAlignment="center"
         android:textSize="40sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         />
 
     <TextView
@@ -39,7 +40,7 @@
 
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         />
 
     <EditText
@@ -49,6 +50,9 @@
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="30dp"
         android:hint="@string/username_hint"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
         />
 
     <TextView
@@ -60,7 +64,7 @@
         android:text="@string/signup_description"
         android:textAlignment="center"
         android:textSize="20sp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         />
 
     <EditText
@@ -70,6 +74,9 @@
         android:layout_marginHorizontal="30dp"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
         />
 
     <EditText
@@ -79,6 +86,9 @@
         android:layout_marginHorizontal="30dp"
         android:hint="@string/confirm_password_hint"
         android:inputType="textPassword"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
+        android:textColorHint="@color/white"
         />
 
     <Button
@@ -89,8 +99,8 @@
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="30dp"
         android:text="@string/signup_button_text"
-        android:backgroundTint="#ED1C24"
-        android:textColor="#F8DA27"
+        android:backgroundTint="?attr/buttonTint"
+        android:textColor="?attr/colorSecondary"
         android:textStyle="bold"
         />
 
