Fixed some bugs and reformatted it, there are one or two issues left that i will fix in the future but they're all visual issues

--- a/Frontend/Unus/app/src/main/res/layout/fragment_friend_request.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_friend_request.xml
@@ -31,14 +31,19 @@
             android:textColor="@color/red"
             android:id="@+id/friend_reqs"
                 />
-        <LinearLayout
-            android:id="@+id/results"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             >
+            <LinearLayout
+                android:id="@+id/results"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
 
-        </LinearLayout>
+            </LinearLayout>
+        </ScrollView>
     </LinearLayout>
 
 </LinearLayout>
