--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
@@ -73,7 +73,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 
         android:layout_width="fill_parent"
-        android:layout_height="250dp"
+        android:layout_height="fill_parent"
         android:orientation="horizontal"
         android:layout_marginTop="15dp"
         android:layout_marginHorizontal="30dp"
@@ -121,7 +121,7 @@
 
             android:id="@+id/friends"
             android:layout_width="150dp"
-            android:layout_height="250dp"
+            android:layout_height="fill_parent"
             android:orientation="vertical"
 
             >
@@ -150,6 +150,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 ></Space>
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="400dp"
+                >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/scrollList"
+                    android:orientation="vertical"
+                    >
+                </LinearLayout>
+            </ScrollView>
 
 
         </LinearLayout>
