--- a/Frontend/Unus/app/src/main/res/layout/pop_up_layout.xml
+++ b/Frontend/Unus/app/src/main/res/layout/pop_up_layout.xml
@@ -46,6 +46,7 @@
                 android:id="@+id/pass_prompt"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
+                android:inputType="textPassword"
                 />
 
             <Button
