--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_profile.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/backgroundColor"
     >
 
     <LinearLayout
@@ -22,8 +23,8 @@
             android:layout_width="100dp"
             android:layout_marginLeft="10dp"
             android:text="BACK"
-            android:backgroundTint="#ED1C24"
-            android:textColor="#F8DA27"
+            android:backgroundTint="?attr/buttonTint"
+            android:textColor="?attr/colorSecondary"
             android:textStyle="bold"
             />
         <TextView
@@ -38,8 +39,8 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:text="Settings"
-            android:backgroundTint="#ED1C24"
-            android:textColor="#F8DA27"
+            android:backgroundTint="?attr/buttonTint"
+            android:textColor="?attr/colorSecondary"
             android:textStyle="bold" />
 
 
@@ -55,7 +56,7 @@
         android:textSize="20sp"
 
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         />
     <TextView
         android:id="@+id/userID"
@@ -67,7 +68,7 @@
         android:textSize="20sp"
 
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -95,7 +96,7 @@
 
             android:textAlignment="center"
             android:textStyle="bold"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             />
         <TextView
             android:id="@+id/games"
@@ -104,7 +105,7 @@
             android:text="Games Played: 0"
             android:textSize="20sp"
 
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             />
         <TextView
             android:id="@+id/wins"
@@ -113,7 +114,7 @@
             android:text="Games Won: 0"
             android:textSize="20sp"
 
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             />
         </LinearLayout>
 
@@ -135,7 +136,7 @@
 
                 android:textAlignment="center"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 />
 
             <LinearLayout
