--- a/Frontend/Unus/app/src/main/res/layout/profile_view_layout.xml
+++ b/Frontend/Unus/app/src/main/res/layout/profile_view_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="200dp"
     android:layout_height="290dp"
     android:gravity="center"
-    android:background="#add8e6">
+    android:background="@color/dark_gray">
 
 
     <LinearLayout
@@ -22,6 +22,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:padding="10dp"
+            android:textColor="@color/purple_500"
             />
 
         <TextView
@@ -33,6 +34,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:padding="10dp"
+            android:textColor="@color/purple_500"
             />
 
         <TextView
@@ -42,21 +44,27 @@
             android:text="Stats:"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:padding="10dp"/>
+            android:padding="10dp"
+            android:textColor="@color/purple_500"
+            />
         <TextView
             android:id="@+id/games_played"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Games Played:"
             android:textSize="20sp"
-            android:padding="10dp"/>
+            android:padding="10dp"
+            android:textColor="@color/purple_500"
+            />
         <TextView
             android:id="@+id/games_won"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Games Won:"
             android:textSize="20sp"
-            android:padding="10dp"/>
+            android:padding="10dp"
+            android:textColor="@color/purple_500"
+            />
 
 
     </LinearLayout>
