--- a/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_user_settings.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/backgroundColor"
     >
 
     <LinearLayout
@@ -21,8 +22,8 @@
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
             android:text="back"
-            android:backgroundTint="#ED1C24"
-            android:textColor="#F8DA27"
+            android:backgroundTint="?attr/buttonTint"
+            android:textColor="?attr/colorSecondary"
             android:textStyle="bold"/>
 
         <TextView
@@ -34,7 +35,7 @@
 
             android:textStyle="bold"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             />
 
     </LinearLayout>
@@ -56,8 +57,8 @@
             android:layout_marginHorizontal="10dp"
             android:layout_weight="0.05"
             android:text="Change Username"
-            android:backgroundTint="#ED1C24"
-            android:textColor="#F8DA27"
+            android:backgroundTint="?attr/buttonTint"
+            android:textColor="?attr/colorSecondary"
             android:textStyle="bold" />
 
         <Button
@@ -67,8 +68,8 @@
             android:layout_marginHorizontal="10dp"
             android:layout_weight="0.05"
             android:text="Change Password"
-            android:backgroundTint="#ED1C24"
-            android:textColor="#F8DA27"
+            android:backgroundTint="?attr/buttonTint"
+            android:textColor="?attr/colorSecondary"
             android:textStyle="bold"/>
 
     </LinearLayout>
@@ -82,8 +83,8 @@
         android:layout_marginHorizontal="80dp"
 
         android:text="Delete Account"
-        android:backgroundTint="#ED1C24"
-        android:textColor="#F8DA27"
+        android:backgroundTint="?attr/buttonTint"
+        android:textColor="?attr/colorSecondary"
         android:textStyle="bold"
         />
 
