--- a/Frontend/Unus/app/src/main/res/layout/fragment_game_two_player.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_game_two_player.xml
@@ -3,8 +3,67 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="?attr/backgroundColor"
     >
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+
+        >
+
+        <LinearLayout
+            android:id="@+id/discard_pile"
+            android:layout_width="120dp"
+            android:layout_height="180dp"
+            android:orientation="vertical"
+            >
+
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/draw_pile"
+            android:layout_width="120dp"
+            android:layout_height="180dp"
+            android:src="@drawable/ic_ub"
+            />
+
+    </LinearLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_weight="1"
+        ></Space>
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        >
+
+        <LinearLayout
+            android:id="@+id/hand_two"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            >
+
+
+
+        </LinearLayout>
+
+    </HorizontalScrollView>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        ></Space>
 
 </LinearLayout>
