delete users doesn't work rn but you should be able to delete users from the admin page

--- a/Frontend/Unus/app/src/main/res/layout/fragment_main_menu.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_main_menu.xml
@@ -23,21 +23,18 @@
         android:layout_marginStart="5dp"
         />
 
-        <Space
-            android:layout_width="70dp"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="match_parent"
-            />
-
-        <Button
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:id="@+id/admin_button"
-            />
-
-        <Space
-            android:layout_width="70dp"
-            android:layout_height="match_parent"
-            />
+            android:layout_weight=".9"
+            android:orientation="horizontal"
+            android:id="@+id/admin"
+            >
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
