--- a/Frontend/Unus/app/src/main/res/layout/fragment_teams.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_teams.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_height="50dp"
             android:layout_width="match_parent"
-            android:text="@string/admin_screen"
+            android:text="@string/teams_page"
             android:textAlignment="center"
             android:textSize="30sp"
             android:textColor="?attr/colorPrimary"
@@ -43,7 +43,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:text="@string/admin_users"
+                android:text="@string/view_teams"
                 android:id="@+id/users"
                 android:backgroundTint="?attr/buttonTint"
                 android:textColor="?attr/colorSecondary"
@@ -53,7 +53,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:text="@string/admin_lobbies"
+                android:text="@string/join_team"
                 android:id="@+id/lobbies"
                 android:backgroundTint="?attr/colorSecondary"
                 android:textColor="?attr/buttonTint"
