--- a/Frontend/Unus/app/src/main/res/layout/team_popup.xml
+++ b/Frontend/Unus/app/src/main/res/layout/team_popup.xml
@@ -51,9 +51,10 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="240dp"
+            android:layout_marginLeft="40dp"
             >
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:id="@+id/playerList"
