--- a/Frontend/Unus/app/src/main/res/layout/fragment_teams.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_teams.xml
@@ -39,7 +39,7 @@
             android:orientation="horizontal"
             >
             <Button
-                android:layout_width="145dp"
+                android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
@@ -49,12 +49,22 @@
                 android:textColor="?attr/colorSecondary"
                 />
             <Button
-                android:layout_width="145dp"
+                android:layout_width="90dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:text="@string/join_team"
                 android:id="@+id/lobbies"
+                android:backgroundTint="?attr/colorSecondary"
+                android:textColor="?attr/buttonTint"
+                />
+            <Button
+                android:layout_width="95dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:text="@string/create_teams"
+                android:id="@+id/create"
                 android:backgroundTint="?attr/colorSecondary"
                 android:textColor="?attr/buttonTint"
                 />
