added gameplay rules

--- a/Frontend/Unus/app/src/main/res/layout/fragment_game_play.xml
+++ b/Frontend/Unus/app/src/main/res/layout/fragment_game_play.xml
@@ -72,7 +72,23 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_weight="1"
-        ></Space>
+        />
+
+    <TextView
+        android:id="@+id/turn_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:textAlignment="center"
+        android:textSize="40sp"
+        android:text="@string/your_turn"
+        android:textColor="@color/white"
+        />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        />
 
     <HorizontalScrollView
         android:layout_width="match_parent"
